--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>CSHelpDesk-Login-webpage</title>
     <!-- Styling in addition to the CSS styles (in case i need it) -->
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,6 @@
                 <a href="#">Login</a>
             </section>
         </div>
-
     </header>
     <h1>Welcome to our Supprt Center</h1>
     <main>
@@ -49,8 +48,5 @@
             </div>
     </main>
     <footer>Copyright 2023, All rights reserved</footer>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
 </body>
-
 </html>
