--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <header>
-        <div>
-            <section><img src="images/miu-logo.png" alt="MIU logo"></section>
+        <div class="container1">
+            <section>
+                <img class="imagelogo" src="images/miu-logo.png" alt="MIU logo">
+            </section>
             <section>
                 <h3>Maharishi University IT Dept</h3>
             </section>
@@ -26,26 +28,29 @@
     </header>
     <h1>Welcome to our Supprt Center</h1>
     <main>
-        <div class="container">
-            <div>
+        <div class="container2">
+            <div id="div1">
                 <h2>Login</h2>
                 <p>Login to know the status of the ticket</p>
-                <img src="images/azure-pic.png" alt="Azure logo">
+                <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a>
                 <p>or login using</p>
                 <p>Username</p>
                 <input type="text">
                 <p>Password</p>
                 <input type="text">
+                <br>
                 <input type="checkbox" name="Remember me" id="RememberMe">
-                <a href="" title="Forgot Password?"></a>
+                <a href="">Forgot Password?</a>
+                <br>
                 <button>Login</button>
             </div>
-            <div>
+            <div id="div2">
                 <p>Login to track your existing support requests. If you haven't created a ticket yet then you would
                     need to <a href="">register</a> or <a href="">create a new ticket</a> to begin.
                 </p>
                 <button>Submit ticket</button>
             </div>
+        </div>
     </main>
     <footer>Copyright 2023, All rights reserved</footer>
 </body>
