--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <body>
     <header>
         <div class="container1">
-            <section>
+            <div id="div11">
                 <img class="imagelogo" src="images/miu-logo.png" alt="MIU logo">
-            </section>
-            <section>
+            </div>
+            <div id="div12">
                 <h3>Maharishi University IT Dept</h3>
-            </section>
-            <section>
+            </div>
+            <div id="div13">
                 <a href="#">Agent Portal</a>
                 <a href="#">Submit Ticket</a>
                 <a href="#">KNowledge Base</a>
                 <a href="#">Login</a>
-            </section>
+            </div>
         </div>
     </header>
     <h1>Welcome to our Supprt Center</h1>
     <main>
         <div class="container2">
-            <div id="div1">
+            <div id="div21">
                 <h2>Login</h2>
                 <p>Login to know the status of the ticket</p>
                 <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a>
@@ -44,7 +44,7 @@
                 <br>
                 <button>Login</button>
             </div>
-            <div id="div2">
+            <div id="div22">
                 <p>Login to track your existing support requests. If you haven't created a ticket yet then you would
                     need to <a href="">register</a> or <a href="">create a new ticket</a> to begin.
                 </p>
