--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>CSHelpDesk-Login-webpage</title>
     <!-- Styling in addition to the CSS styles (in case i need it) -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/">
 </head>
 
 <body>
