--- a/index.html
+++ b/index.html
@@ -8,26 +8,7 @@
     <!-- Styling in addition to the CSS styles (in case i need it) -->
     <link rel="stylesheet" href="./css/style.css">
     <style>
-        #password{
-            width: 350px ;    
-        }
-        #username{
-            width: 350px;
-        }
-        #forgotpassword{
-            text-align: right;
-        }
-        #orloginusing{
-            text-align: center;
-            stroke-dashoffset: 5px;
-        }
-        #login{
-            text-align: center;
-            background-color: black;
-            color: white;
-            width: 350px;
-            height: auto;
-        }
+       
     </style>
 </head>
 
@@ -53,14 +34,16 @@
                 <h2>Login</h2>
                 <p>Login to know the status of the ticket</p>
                 <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a><br><br>
-                <label for="orloginusing" id="orloginusing" >or login using</label><br>
-                <label for="username">Username</label> <br>
-                <input type="text" name="username" id="username" width="50"><br><br>
+                <label for="orloginusing" id="orloginusing">or login using</label><br>
+                <label for="username">Username or Email</label> <br>
+                <input type="text" name="username" id="username" width="50" placeholder="Enter email"><br><br>
                 <label for="password">Password</label><br>
                 <input type="text" name="password" id="password" maxlength="18" placeholder="password">
-                <br>
-                <input type="checkbox" name="Remember me" id="RememberMe"><label for="RememberMe">Remember me</label>
-                <a id="forgotpassword" href="">Forgot Password?</a>
+                <br><br>
+                <div class="container3">
+                    <div id="RememberMe"><input type="checkbox" name="Remember me"><label for="RememberMe">Remember me</label></div>
+                    <div id="forgotpassword"><a href="">Forgot Password?</a></div>
+                </div>
                 <br><br>
                 <button type="login" name="login" id="login">Login</button>
             </div>           
@@ -68,7 +51,7 @@
                 <p>Login to track your existing support requests. If you haven't created a ticket yet then you would
                     need to <a href="">register</a> or <a href="">create a new ticket</a> to begin.
                 </p>
-                <input type="submit" name="submit" id="submit">
+                <input type="submit" name="submit" id="submitbtn"><!--Submit ticket</button>-->
             </div>
         </div>
     </main>
