--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input type="text" name="password" id="password" maxlength="18" placeholder="password">
                 <br><br>
                 <div class="container3">
-                    <div id="RememberMe"><input type="checkbox" name="Remember me"><label for="RememberMe">Remember me</label></div>
+                    <div id="RememberMe"><input type="checkbox" name="Remember me" checked><label for="RememberMe">Remember me</label></div>
                     <div id="forgotpassword"><a href="">Forgot Password?</a></div>
                 </div>
                 <br><br>
