--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div id="div21">
                 <h2>Login</h2>
                 <p>Login to know the status of the ticket</p>
-                <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a><br><br>
-                <label for="orloginusing" id="orloginusing">or login using</label><br>
+                <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a><br>
+                <p id="orloginusing">or login using</p>
                 <label for="username">Username or Email</label> <br>
                 <input type="text" name="username" id="username" width="50" placeholder="Enter email"><br><br>
                 <label for="password">Password</label><br>
