--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
             </div>
         </div>
     </main>
+    <p>
+        <a href=" https://validator.w3.org/check?url=https://yonatanembiza.github.io/aboutme/">
+            <img 
+            src="images/w3c-html.png" 
+            alt="Valid HTML!">
+        </a>
+        <a href="https://jigsaw.w3.org/css-validator/check?url=https://yonatanembiza.github.io/aboutme/">
+            <img 
+                src="images/css_validator.jpeg"
+                alt="Valid CSS!">
+        </a>            
+    </p>
     <footer>Copyright 2023, All rights reserved</footer>
 </body>
 </html>
