--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         </div>
     </main>
     <p>
-        <a href=" https://validator.w3.org/check?url=https://yonatanembiza.github.io/aboutme/">
+        <a href=" https://validator.w3.org/check?url=https://yonatanembiza.github.io/CSHelpDesk-Login-webpage/">
             <img 
             src="images/w3c-html.png" 
             alt="Valid HTML!">
         </a>
-        <a href="https://jigsaw.w3.org/css-validator/check?url=https://yonatanembiza.github.io/aboutme/">
+        <a href="https://jigsaw.w3.org/css-validator/check?url=https://yonatanembiza.github.io/CSHelpDesk-Login-webpage/">
             <img 
                 src="images/css_validator.jpeg"
                 alt="Valid CSS!">
