--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <p>Login to know the status of the ticket</p>
                 <a href=""><img class="imageazure" src="images/azure-pic.png" alt="Azure logo"></a><br>
                 <p id="orloginusing">or login using</p>
+                <!--</div class="line"></div><p id="orloginusing">or login using</p><div class="line"></div>-->
                 <label for="username">Username or Email</label> <br>
                 <input type="text" name="username" id="username" width="50" placeholder="Enter email"><br><br>
                 <label for="password">Password</label><br>
